# solKB

./: .gitignore  README.md  agent_kb_database_filtered.json  kb.jsonl  pyproject.toml  requirements.txt
agent_system/: __init__.py  agent_kb.json  distillation.py  filter_tool.py  inference.py  iterative_orchestrator.py  kb.py  main.py  models.py  orchestrator.py  recursieve_orchestrator.py  tasks.json
agent_system/inferencer/: __init__.py  agent_kb_retrieval_unified.py  agent_kb_service_unified.py  agent_kb_utils_unified.py  distilled_kb.json  generated_kb.json  recursive.py  recursive_llm.py  recursive_slm.py  unified_database.json
agent_system/llm/: __init__.py  runner_openai.py  supervisor.py  supervisor_v1.py  supervisor_v2.py
agent_system/orchestrator/: __init__.py  iterative_v1.py  recursive_v1.py  recursive_v2.py
agent_system/reconstructor/: __init__.py  adapter.py  subtask_rewriter.py
agent_system/slm/: __init__.py  runner_hf.py
agent_system/tools/: __init__.py  builtin.py  registry.py  safe_calc.py
